ajout de usercontroller and userervice cz i forgot them and swagger for it ofc
